# structure_d_lab2

./: CMakeLists.txt  README.md  build_release.bat  main.cpp  open_mkl_console.bat  run_1024_full.bat  run_1024_skip_naive.bat  run_test_256.bat  setup_env.bat
src/: main.cpp
